#ifndef H_TW_KEYACTION
#define H_TW_KEYACTION

namespace tw {
enum KeyAction {

    PRESS = 1,
    RELEASE = 0,
    REPEAT = 2

};
}

#endif
