#ifndef H_ENUM_LOGLEVEL
#define H_ENUM_LOGLEVEL

namespace tw {
enum LogLevel {
    UNDEFINED = 0,
    VERBOSE = 1,
    NOTICE = 2,
    WARNING = 3,
    ERROR = 4
};
}

#endif
